:zap: modify get details